--- a/templates/alunos.html
+++ b/templates/alunos.html
@@ -6,7 +6,7 @@
     <title>Alunos</title>
     <style>
         body {
-            background: linear-gradient(to bottom, #0077cc, #ffffff); /* Degradê do azul para o branco */
+            background: linear-gradient(to bottom, #5235d4, #ffffff); /* Degradê do azul para o branco */
             height: 100vh; /* Altura de 100% da viewport */
             font-family: Arial, sans-serif; /* Fonte do texto */
             margin: 0;
