--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,7 @@
                 <ul class="dropdown">
                     <li><a href="/professores/">Gerenciar Professores</a></li>
                     <li><a href="/alunos/">Gerenciar Alunos</a></li>
+                    <li><a href="{{ url_for('turmas.listar_turmas') }}">Gerenciar Turmas</a></li>
                 </ul>
             </li>
         </ul>
